Check in rogerl's patch for bug 178722, r=me.